Fixed vertical alignment issues in forms
-- Explicitly specified .table font-size
-- lightened table border colour

--- a/sass/_forms.scss
+++ b/sass/_forms.scss
@@ -36,12 +36,21 @@ textarea {
 
 .form-row {
   margin-bottom: 5px;
+  // input, input[type], select, textarea, .immutable, .snippet {
+  //   /* reset margins on these elements when inside a form-row */
+  //   margin-bottom: 0;
+  // }
+  .button {
+    margin-bottom: #{9px/$button-font-size}em;
+  }
   @include clearfix();
   .snippet {
     // align snippets with inputs
-    height: $input-height;
-    line-height: $input-height;
+    height: #{$input-height/$base}em;
+    line-height: #{$input-height/$base}em;
     padding-top: 0; padding-bottom: 0;
+    max-width: 100%;
+    margin: 0 0 #{9px/$button-font-size}em;
   }
 }
 
@@ -104,6 +113,7 @@ label {
 .form-actions {
   @extend .field-wrapper;
   margin-top: 1em;
+  .button { margin-bottom: 0; }
 }
 
 select, textarea,       input[type="text"],           input[type="password"],
@@ -222,7 +232,6 @@ input[type="color"],
   white-space: nowrap;
   text-overflow: ellipsis;
   cursor: text;
-  color: $input-disabled-color !important;
   border-color: lighten($input-disabled-color, 30%);
   @include box-shadow(inset 0 1px 2px lighten($input-disabled-color, 40%));
 }
